Fixes spacing in the footer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -355,9 +355,13 @@ nav {
   margin-bottom: 5vh;
 }
 
-.block {
+.home-footer {
   display: block;
   height: 32.5vw;
+}
+
+.footer {
+  height: 25vw;
 }
 
 .flex-title {
