--- a/sass/spacing.scss
+++ b/sass/spacing.scss
@@ -21,9 +21,12 @@ nav {
     height: 15vh;
     margin-bottom: 5vh;
 }
-.block {
+.home-footer {
     display:block;
     height: 32.5vw;
+}
+.footer {
+    height:25vw;
 }
 .flex-title {
     display: flex;
